--- a/app/globals.css
+++ b/app/globals.css
@@ -412,7 +412,7 @@ p {
 }
 .loder-container svg text {
   font-size: 57px;
-  strokeWidth: 2;
+  strokewidth: 2;
   letter-spacing: -1px;
 }
 .loder-container svg text.text-body {
@@ -425,20 +425,20 @@ p {
   0% {
     fill: transparent;
     stroke: var(--color-primary-orange);
-    strokeWidth: 3;
+    strokewidth: 3;
     stroke-dashoffset: 25%;
     stroke-dasharray: 0 32%;
   }
   50% {
     fill: transparent;
     stroke: var(--color-primary-orange);
-    strokeWidth: 3;
+    strokewidth: 3;
   }
   80%,
   100% {
     fill: var(--color-primary-orange);
     stroke: transparent;
-    strokeWidth: 0;
+    strokewidth: 0;
     stroke-dashoffset: -25%;
     stroke-dasharray: 32% 0;
   }
@@ -910,4 +910,7 @@ button:focus {
 .blurred {
   filter: blur(4px);
   transition: filter 0.2s ease;
+}
+.meImg {
+  background: linear-gradient(180deg, #514f52 0%, #121113 100%);
 }
